# xdl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bench/: bench.cpp
cmake/: xdl-config.cmake.in
docs/: api_reference.md  architecture.md  getting_started.md
include/: xdl.h
include/xdl/: bptree.h  cache.h  compression.h  db.h  index.h  migrate.h  mmap.h  page.h  pager.h  storage.h  types.h  wal.h
src/: bptree.cpp  cache.cpp  compression.cpp  db.cpp  index.cpp  main.cpp  migrate.cpp  mmap.cpp  page.cpp  pager.cpp  storage.cpp  wal.cpp
tests/: test_xdl.cpp
